src/app/line-chart/line-chart.component.scss
body {
  font: 12px Arial;
  position: absolute;
}

text.shadow {
  stroke: #fff;
  stroke-width: 2.5px;
  opacity: 0.9;
}

path {
  stroke: steelblue;
  stroke-width: 2;
  fill: none;
}

.axis path,
.axis line {
  fill: none;
  stroke: grey;
  stroke-width: 1;
  shape-rendering: crispEdges;
}

.grid .tick {
  stroke: lightgrey;
  stroke-opacity: 0.7;
  shape-rendering: crispEdges;
}
.grid path {
  stroke-width: 0;
}

.area {
  fill: lightsteelblue;
  stroke-width: 0;
}

div.tooltip {
  position: absolute;			
  text-align: center;			
  width: 60px;					
  height: 28px;					
  padding: 2px;				
  font: 12px sans-serif;		
  background: lightsteelblue;	
  border: 0px;		
  border-radius: 8px;			
  pointer-events: none;			
}

.bubble {
  height: 80px;
  width: 7%;
  background: ivory;
  display: block;
  margin: 0 auto;
  border-radius: 20px;
  margin-top: 50px;
  font-size: 14px;
  text-align: center;
  padding: 5px;
}

.pointer {
  height: 30px;
  width: 42px;
  background: ivory;
  margin: 0 auto;
  transform: rotate(45deg);
  border-radius: 0 0 12px 0;
  margin-top: -22px;
  position: relative;
  left: calc(2.5vw - 50px);
}

.blurred {
  background: rgb(194, 188, 188);
  filter: blur(10px);
  position: relative;
  top: -135px;
  z-index: -1;
}

